# LogicCircuitSimulator

./: .gitignore  CMakeLists.txt  README.md
docs/: TODO.md
input/: Input.cpp  Input.h
src/: AndGate.cpp  AndGate.h  Component.cpp  Component.h  NotGate.cpp  NotGate.h  OrGate.cpp  OrGate.h  ResourceManager.cpp  ResourceManager.h  Wire.cpp  main.cpp  nanosvg_impl.cpp
src/circuit_elements/: InputSwitch.cpp  InputSwitch.h  Wire.cpp  Wire.h
src/core/: Component.cpp  Component.h  GameState.h  Grid.cpp  Grid.h
src/gates/: AndGate.cpp  AndGate.h  NotGate.cpp  NotGate.h  OrGate.cpp  OrGate.h
src/input/: Input.cpp  Input.h
src/managers/: ComponentManager.cpp  ComponentManager.h  ConnectionManager.cpp  ConnectionManager.h  ResourceManager.cpp
src/rendering/: Renderer.cpp  Renderer.h
src/utils/: ResourceManager.cpp  Wire.cpp  Wire.h
